--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,3 +1,21 @@
+{% set navItems = [
+    {
+        label: 'Home',
+        url: '/'
+    },
+    {
+        label: 'About',
+        url: '/about'
+    },
+    {
+        label: 'Lorem',
+        url: '/lorem'
+    },
+    {
+        label: 'Contact',
+        url: '/contact'
+    }
+] %}
 <!DOCTYPE html>
 <html lang="{{ craft.app.language }}">
 <head>
@@ -14,41 +32,40 @@
     {{ craft.vite.script('src/js/app.js', false) }}
 </head>
 <body class="ltr">
-    <main>
-        {{ organism('header', {
-            title: 'Henk',
-            nav: {
-                items: [
-                    {
-                        label: 'Home',
-                        url: '/'
-                    },
-                    {
-                        label: 'About',
-                        url: '/about'
-                    },
-                    {
-                        label: 'Lorem',
-                        url: '/lorem'
-                    },
-                    {
-                        label: 'Contact',
-                        url: '/contact'
-                    }
-                ],
+<main>
+    <div class="drawer">
+        <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
+        <div class="drawer-content flex flex-col">
+            {{ molecule('nav', {
+                title: 'Navigation',
+                items: navItems
+            }) }}
+            {{ organism('hero.centered', {
+                title: 'Henk',
+                content: 'Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.',
                 buttons: [
                     {
                         label: 'Login',
                         url: '#login',
+                        style: 'btn-primary',
                     },
                     {
                         label: 'Register',
                         url: '#register',
-                        style: 'secondary',
+                        style: 'btn-secondary',
                     }
-                ]
-            },
-        }) }}
-    </main>
+                ],
+            }) }}
+        </div>
+        <div class="drawer-side">
+            <label for="my-drawer-3" aria-label="close sidebar" class="drawer-overlay"></label>
+            <ul class="menu bg-base-200 min-h-full w-80 p-4">
+                {% for item in navItems %}
+                    <li>{{ atom('a', item) }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</main>
 </body>
 </html>
